--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,12 @@ footer {
 a {
     color: #fff;
 }
-
+h2 {
+    text-align: center;
+}
+h2 iframe {
+    margin-top: 20px;
+}
 @media only screen and (min-width: 600px) {
     h2 {
         font-size: 50px;
