--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ h2 {
 h2 iframe {
     margin-top: 20px;
 }
+#score {
+    font-weight: normal;
+    margin-top: 10px;
+    font-size: 16px;
+    padding: 10px 0 10px 0;
+}
 @media only screen and (min-width: 600px) {
     h2 {
         font-size: 50px;
