--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,9 @@ h2 {
 h2 iframe {
     margin-top: 20px;
 }
+#ko {
+    font-size: 16px;
+}
 #score {
     font-weight: normal;
     margin-top: 10px;
