--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 .hero {
-    background-image: url('../bg.jpg');
+    background-image: url('../bg_2020_2.jpg');
     background-size: cover;
     background-position: center center;
     position: absolute;
